src/test/ui/compile-fail-migration/asm-src-loc.stderr
error: <inline asm>:1:2: error: invalid instruction mnemonic 'nowayisthisavalidinstruction'
        nowayisthisavalidinstruction
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~

  --> $DIR/asm-src-loc.rs:17:9
   |
LL |         asm!("nowayisthisavalidinstruction"); //~ ERROR instruction
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

